doc: car routes documentation
