# src/modules/cars/useCases/CreateSpecification/CreateSpecificationController.ts
@@ -16,7 +16,7 @@ class CreateSpecificationController {
             description,
         });
 
-        return response.status(201).json(specification);
+        return response.status(201).send();
     }
 }
 
